--- a/Tools/SampleTool/CMakeLists.txt
+++ b/Tools/SampleTool/CMakeLists.txt
@@ -133,14 +133,7 @@ if (SLN_GEN_LOCK STREQUAL "SampleTool")
   csharp_save_vs_solution(SampleTool)
 endif()
 
-#Configure the setenv script.
-configure_file(
-  ${CMAKE_CURRENT_SOURCE_DIR}/setenv.sh.in
-  ${PROJECT_BINARY_DIR}/setenv.sh
-  @ONLY
-  )
-
 #Give the user some instructions how to proceed.
 MESSAGE(STATUS "==============================================================")
-MESSAGE(STATUS "==           Please run: source setenv.sh && make           ==") 
+MESSAGE(STATUS "==           Please run: make                               ==")
 MESSAGE(STATUS "==============================================================")
