Adjust reference files.

--- a/SolidOpt/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryFinallyExceptionFinallyAtEnd.il.cfg
+++ b/SolidOpt/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryFinallyExceptionFinallyAtEnd.il.cfg
@@ -32,6 +32,14 @@ block 3:
     IL_000e: ldstr "Finally..."
     IL_0013: call System.Void System.Console::WriteLine(System.String)
     IL_0018: endfinally
+  successors:
+    block 4
   predecessors:
     block 1
     block 2
+block 4:
+  kind: structure
+  body:
+    IL_0019: ret
+  predecessors:
+    block 3
