Add some basic infrastructure for our own AST representation.

--- a/SolidOpt/src/Services/Transformations/Multimodel/CMakeLists.txt
+++ b/SolidOpt/src/Services/Transformations/Multimodel/CMakeLists.txt
@@ -26,3 +26,4 @@ add_subdirectory(ILtoTAC)
 add_subdirectory(ILtoAST)
 add_subdirectory(ILtoCFG)
 add_subdirectory(ILtoCG)
+add_subdirectory(TACtoAST)
