Move ILinearInstruction in a common CodeModel library.

--- a/SolidOpt/src/Services/Transformations/CodeModel/CMakeLists.txt
+++ b/SolidOpt/src/Services/Transformations/CodeModel/CMakeLists.txt
@@ -4,6 +4,19 @@
 ## For further details see the nearest License.txt
 ##
 
+csharp_add_library(
+  SolidOpt.Services.Transformations.CodeModel.dll
+  ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
+  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
+  )
+csharp_add_dependencies(
+  SolidOpt.Services.Transformations.CodeModel.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.dll
+  # External
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
+  )
+
 add_subdirectory(AbstractSyntacticTree)
 add_subdirectory(CallGraph)
 add_subdirectory(ControlFlowGraph)
