--- a/SolidOpt/src/Services/Transformations/Multimodel/ILtoCFG/src/CMakeLists.txt
+++ b/SolidOpt/src/Services/Transformations/Multimodel/ILtoCFG/src/CMakeLists.txt
@@ -12,6 +12,7 @@ csharp_add_library(
 csharp_add_dependencies(
   SolidOpt.Services.Transformations.MultiModel.ILtoCFG.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.ControlFlowGraph.dll
   # Monodevelop 2.8 compatibility
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.dll
