Minimal working SolidIDE implementation. Toolbox and Designer plugins are experimental implementations with some hardcoded fragments.

--- a/Tools/SolidIDE/plugins/CMakeLists.txt
+++ b/Tools/SolidIDE/plugins/CMakeLists.txt
@@ -8,3 +8,7 @@ add_subdirectory(Toolbox)
 add_subdirectory(Designer)
 
 add_subdirectory(SamplePlugins)
+
+add_subdirectory(Domains)
+add_subdirectory(Inspector)
+add_subdirectory(Timeline)
