Add Timeline plugin to plugins for load on SolidIDE start.

--- a/Tools/SolidIDE/src/Properties/Plugins.env.in
+++ b/Tools/SolidIDE/src/Properties/Plugins.env.in
@@ -1,5 +1,6 @@
 @CMAKE_LIBRARY_OUTPUT_DIR@/Designer.dll
 @CMAKE_LIBRARY_OUTPUT_DIR@/Toolbox.dll
 @CMAKE_LIBRARY_OUTPUT_DIR@/Inspector.dll
+@CMAKE_LIBRARY_OUTPUT_DIR@/Timeline.dll
 #@CMAKE_LIBRARY_OUTPUT_DIR@/TestPlugin.dll
 #@CMAKE_LIBRARY_OUTPUT_DIR@/TreeViewPad.dll
