Implement auto discovery toolbox mechanism for shapes, viewers and dimains. Add auto shapes preview image. Add meta data (attributes) to describe Domain shapes. Add concept: Domain shapes are mainly basic SolidV shapes descendant, but with new semantic and ne meta data. Add default Universe domain for all domain-undefined shapes.

--- a/Tools/SolidIDE/plugins/Toolbox/CMakeLists.txt
+++ b/Tools/SolidIDE/plugins/Toolbox/CMakeLists.txt
@@ -7,6 +7,7 @@
 csharp_add_library(
   Toolbox.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
+  ${CMAKE_CURRENT_SOURCE_DIR}/*.png
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
 csharp_add_dependencies(
