Basic implementation of ControlFlow Domain.

--- a/Tools/SolidIDE/plugins/Domains/ControlFlow/CMakeLists.txt
+++ b/Tools/SolidIDE/plugins/Domains/ControlFlow/CMakeLists.txt
@@ -4,17 +4,20 @@
 ## For further details see the nearest License.txt
 ##
 
-#csharp_add_library(
-#  _Name_.dll
-#  ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
-#  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
-#  )
-#csharp_add_dependencies(
-#  _Name_.dll
-#  ${CMAKE_RUNTIME_OUTPUT_DIR}/SolidIDE.exe
-#  # External
-#  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
-#  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidV.dll
-#  # GAC
-#  pkg:gtk-sharp-2.0
-#  )
+csharp_add_library(
+  ControlFlowDomain.dll
+  ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
+  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
+  )
+csharp_add_dependencies(
+  ControlFlowDomain.dll
+  ${CMAKE_RUNTIME_OUTPUT_DIR}/SolidIDE.exe
+  ${CMAKE_RUNTIME_OUTPUT_DIR}/Toolbox.dll
+  # External
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidV.dll
+  # External
+  Mono.Cairo.dll
+  # GAC
+  pkg:gtk-sharp-2.0
+  )
