--- a/Tools/SolidIDE/src/Properties/Plugins.env.in
+++ b/Tools/SolidIDE/src/Properties/Plugins.env.in
@@ -2,5 +2,6 @@
 @CMAKE_LIBRARY_OUTPUT_DIR@/Toolbox.dll
 @CMAKE_LIBRARY_OUTPUT_DIR@/Inspector.dll
 @CMAKE_LIBRARY_OUTPUT_DIR@/Timeline.dll
+@CMAKE_LIBRARY_OUTPUT_DIR@/ControlFlowDomain.dll
 #@CMAKE_LIBRARY_OUTPUT_DIR@/TestPlugin.dll
 #@CMAKE_LIBRARY_OUTPUT_DIR@/TreeViewPad.dll
